@@ -8,12 +8,9 @@ Disassembly of section .text:
 
 00008004 <bar>:
     8004:	e12fff1e 	bx	lr
-Disassembly of section .glue_7t:
 
 00008008 <__bar_from_thumb>:
     8008:	4778      	bx	pc
     800a:	46c0      	nop			\(mov r8, r8\)
-
-0000800c <__bar_change_to_arm>:
     800c:	eafffffc 	b	8004 <bar>
 
