@@ -1,3 +1,10 @@
+2009-04-22  Christophe Lyon  <christophe.lyon@st.com>
+
+	PR9743
+	* ld-arm/arm-call.d: Update expected result.
+	* ld-arm/arm-pic-veneer.d: Likewise.
+	* ld-arm/thumb2-b-interwork.d: Likewise.
+
 2009-04-22  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* ld-scripts/rgn-at1.d: Cope with larger padding on sections.
